--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,3 +10,12 @@
     <string name="platzhalter">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
     <string name="filtern_button">Filtern</string>
 </resources>
+
+<!--LuckyV (link) ist ein deutscher Grand Theft Auto V (kurz GTAV) Hardcore Roleplay (kurz RP) Server, welcher am 15. Mai 2023 seinen 3. Geburtstag feiert.-->
+<!--Bei dieser App handelt es sich um die App-Version einer bereits existierenden Internetseite https://luckyv-streamer.frozenpenguin.media/ (link), welche alle Spieler auflistet, die ihr LuckyV RP auf Twitch streamen.-->
+<!--Erstellt wurde diese Internetseite, weil die Suchfunktion auf Twitch in 99% der Fälle nicht hilfreich ist, Streamer, die aktuell Content auf LuckyV streamen, zu finden.-->
+
+
+<!--Warum dann noch eine App bauen, die genau das gleiche macht? (unterstrichen und fett)-->
+<!--Ganz einfach: Die LuckyV-Streamer (link) ist zwar eine sehr hilfreiche und nützliche Internetseite, diese ist aber leider nicht für die Nutzung eines Smartphones/Tablets konzipiert-->
+<!--Und deshalb nehme ich das nun in die Hand.-->
