--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,22 @@
 <resources>
     <string name="app_name">LuckyV Streamer List</string>
-    <string name="app_description">abc</string>
+
+    <string name="app_description_line1">Bei dieser App handelt es sich um die App-Version einer <b>bereits existierenden Internetseite</b> https://luckyv-streamer.frozenpenguin.media/ (link), welche alle Spieler auflistet, die ihr LuckyV RP auf Twitch streamen.</string>
+    <string name="app_description_line2">Erstellt wurde diese Internetseite, weil die Suchfunktion auf Twitch in 99% der Fälle nicht hilfreich ist, Streamer, die aktuell Content auf LuckyV streamen, zu finden.</string>
+
+    <string name="app_description_line3"><b><u>Warum dann noch eine App bauen, die genau das gleiche macht?</u></b></string>
+    <string name="app_description_line4">Ganz einfach: Die Internetseite ist zwar sehr hilfreich und nützlich, diese ist aber leider nicht für die Nutzung eines Smartphones/Tablets konzipiert. Und deshalb nehme ich das nun in die Hand.</string>
+
     <string name="players_online">online:</string>
     <string name="online_players_number">${players_online}</string>
     <string name="suchbegriff">Suchbegriff</string>
+    <string name="filtern_button">Filtern</string>
+
     <string name="streamers_live">Streamers live</string>
     <string name="streamers_offline">Streamers offline</string>
 
     <string name="platzhalter">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
-    <string name="filtern_button">Filtern</string>
+
 </resources>
 
 <!--LuckyV (link) ist ein deutscher Grand Theft Auto V (kurz GTAV) Hardcore Roleplay (kurz RP) Server, welcher am 15. Mai 2023 seinen 3. Geburtstag feiert.-->
