--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
     <string name="app_name">LuckyV Streamer List</string>
 
-    <string name="app_description_line1">Bei dieser App handelt es sich um die App-Version einer <b>bereits existierenden Internetseite</b> https://luckyv-streamer.frozenpenguin.media/ (link), welche alle Spieler auflistet, die ihr LuckyV RP auf Twitch streamen.</string>
-    <string name="app_description_line2">Erstellt wurde diese Internetseite, weil die Suchfunktion auf Twitch in 99% der Fälle nicht hilfreich ist, Streamer, die aktuell Content auf LuckyV streamen, zu finden.</string>
+    <string name="app_description_line1">Bei dieser App handelt es sich um die App-Version einer <b>bereits existierenden Internetseite</b> https://luckyv-streamer.frozenpenguin.media/ (link), welche alle Spieler auflistet, die ihr LuckyV RP auf Twitch streamen. Erstellt wurde diese Internetseite, weil die Suchfunktion auf Twitch in 99% der Fälle nicht hilfreich ist, Streamer, die aktuell Content auf LuckyV streamen, zu finden.</string>
+    <string name="app_description_line2"><b><u>Warum dann noch eine App bauen, die genau das gleiche macht?</u></b></string>
 
-    <string name="app_description_line3"><b><u>Warum dann noch eine App bauen, die genau das gleiche macht?</u></b></string>
-    <string name="app_description_line4">Ganz einfach: Die Internetseite ist zwar sehr hilfreich und nützlich, diese ist aber leider nicht für die Nutzung eines Smartphones/Tablets konzipiert. Und deshalb nehme ich das nun selbst in die Hand.</string>
+    <string name="app_description_line3">Ganz einfach: Die Internetseite ist zwar sehr hilfreich und nützlich, diese ist aber leider nicht für die Nutzung eines Smartphones/Tablets konzipiert. Und deshalb nehme ich das nun selbst in die Hand.</string>
 
     <string name="players_online">online:</string>
     <string name="online_players_number">${players_online}</string>
