--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="players_online">online:</string>
     <string name="online_players_number">${players_online}</string>
     <string name="suchbegriff">Suchbegriff</string>
-    <string name="filtern_button">Filtern</string>
+    <string name="sort_button">Sortieren</string>
 
     <string name="streamers_live">Streamers live</string>
     <string name="streamers_offline">Streamers offline</string>
